@@ -339,7 +339,7 @@ void project::Clean()
 	
 	/* Write script */
 	out<<"#!/bin/sh"<<std::endl;
-	out<<"export PATH=$PATH:/usr/bin:/atheos/autolnk/bin"<<std::endl;
+	out<<"export PATH=$PATH:/usr/bin:/usr/indexes/bin"<<std::endl;
 	out<<"cd '"<<m_cFilePath.GetDir().GetPath().c_str()<<"'"<<std::endl;
 	out<<"make -s clean"<<std::endl;
 	out<<"echo Finished - Press return to close this window"<<std::endl;
@@ -375,7 +375,7 @@ void project::Compile()
 	
 	/* Write script */
 	out<<"#!/bin/sh"<<std::endl;
-	out<<"export PATH=$PATH:/usr/bin:/atheos/autolnk/bin"<<std::endl;
+	out<<"export PATH=$PATH:/usr/bin:/usr/indexes/bin"<<std::endl;
 	out<<"cd '"<<m_cFilePath.GetDir().GetPath().c_str()<<"'"<<std::endl;
 	out<<"make"<<std::endl;
 	out<<"echo Finished - Press return to close this window"<<std::endl;
@@ -856,19 +856,3 @@ bool project::IsWorking()
 {
 	return( m_bIsWorking );
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
