@@ -1,12 +1,12 @@
 export PWD
 
 # Run paths
-export PATH=/bin:/usr/local/sbin:/usr/local/bin:/atheos/autolnk/sbin:/atheos/autolnk/bin
-export DLL_PATH=@bindir@/lib:/system/libraries:/system:/usr/local/lib:/atheos/autolnk/lib
+export PATH=/bin:/usr/local/sbin:/usr/local/bin:/usr/indexes/sbin:/usr/indexes/bin
+export DLL_PATH=@bindir@/lib:/system/libraries:/system:/usr/local/lib:/usr/indexes/lib
 
 # Paths for software compilation
-export LIBRARY_PATH=/usr/local/lib:/system/libraries:/atheos/autolnk/lib
-export C_INCLUDE_PATH=/usr/local/include:/system/include:/atheos/autolnk/include
+export LIBRARY_PATH=/usr/local/lib:/system/libraries:/usr/indexes/lib
+export C_INCLUDE_PATH=/usr/local/include:/system/include:/usr/indexes/include
 export CPLUS_INCLUDE_PATH=$C_INCLUDE_PATH
 
 # Set this right, or havoc may be wreaked in /system/init.sh
@@ -32,4 +32,3 @@ alias ll='ls -l'
 alias dir='ls -l --color'
 alias more=less
 alias m=less
-
